# gengine

./: .gitignore  CMakeLists.txt  Justfile  README
.github/workflows/: build.yml
docs/: notes
glad/include/glad/: glad.h
glad/src/: glad.c
include/: shader.h
include/gengine/: shader.h
shaders/: frag.glsl  vert.glsl
src/: main.cc
